Fix squished images, update pdf styles

--- a/mnd/static/css/pdf_style.css
+++ b/mnd/static/css/pdf_style.css
@@ -161,6 +161,29 @@ blockquote {
   min-width: 678px;
 }
 
+.annotation-box,
+.left-justified-block {
+    display: flex;
+    justify-content: center;
+}
+
+.annotation-box p {
+    flex: 0;
+    min-width: 400px;
+    border: 4px double #003965;
+    font-size: 1rem;
+    padding: 10px;
+    margin-top: 0;
+    margin-left: 0;
+}
+
+.left-justified-block p {
+    flex-basis: content;
+    font-size: 1.1rem;
+    margin-top: 0;
+    margin-left: 0;
+}
+
 .citation {
   font-size: 1em;
   margin-left: 3rem;
@@ -227,8 +250,7 @@ a[href^='#'] {
   border-width: 1px;   
   border-color: #ccc;
 }
-.smallcenter,
-.full-width {
+.smallcenter,{
   flex: 0;
   width: auto;
   /* max-width: 75%; */
@@ -240,7 +262,8 @@ a[href^='#'] {
 
 .full-width {
   max-width: 650px;
-  /* margin-bottom: 5px; */
+  margin-top: -10px;
+  margin-bottom: -15px;
   border-style: solid;   
   border-width: 1px;   
   border-color: #ccc;
